# VedCoin

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
docs/: bridge-system.md  tokenomics.md
docs/whitepapers/: economic-whitepaper.md  technical-whitepaper.md
pallets/vedcoin/: Cargo.toml
pallets/vedcoin/src/: lib.rs
src/: lib.rs
