[patch.crates-io]
windows-sys = "0.48.0"
[package]
name = "pallet-vedcoin"
version = "0.1.0"
edition = "2021"
authors = ["Ved DeFi Team"]
description = "VedCoin token pallet"
license = "MIT"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }

# Substrate dependencies
frame-benchmarking = { version = "4.0.0", default-features = false, optional = true }
frame-support = { version = "4.0.0", default-features = false }
frame-system = { version = "4.0.0", default-features = false }
sp-api = { version = "4.0.0", default-features = false }
sp-core = { version = "4.0.0", default-features = false }
sp-runtime = { version = "4.0.0", default-features = false }
sp-std = { version = "4.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
